fix: add translation for year input placeholder in cron

--- a/libs/components/src/lib/components/cron/components/year/year.component.html
+++ b/libs/components/src/lib/components/cron/components/year/year.component.html
@@ -90,9 +90,9 @@
                 [(ngModel)]="yearForAdd"
                 [prizmInputAllowedSymbols]="allowedYear"
                 [ngModelOptions]="{ standalone: true }"
+                [placeholder]="cronI18n | prizmPluck : ['chooseYearLabel']"
                 (enter)="onEnter($event, chipsComponent)"
                 prizmInput
-                placeholder="Введите год"
               />
               <prizm-chips
                 #chipsComponent
