fix(components/input-number): right style on disabled mode #1644 #1645

--- a/apps/doc/src/app/components/input/input-number/input-number-example.component.html
+++ b/apps/doc/src/app/components/input/input-number/input-number-example.component.html
@@ -5,6 +5,14 @@
     </prizm-doc-example>
 
     <prizm-doc-example
+      id="disabled"
+      [content]="prizmInputNumberDisabled"
+      heading="Input number disabled example"
+    >
+      <prizm-input-number-disabled-example></prizm-input-number-disabled-example>
+    </prizm-doc-example>
+
+    <prizm-doc-example
       id="counter"
       [content]="prizmInputNumberCounter"
       heading="Input number counter example"
