--- a/apps/doc/src/app/components/listing-item/listing-item-example.component.html
+++ b/apps/doc/src/app/components/listing-item/listing-item-example.component.html
@@ -3,19 +3,25 @@
     Our listing item component is used to display listed items in dropdowns. Component in developer preview.
   </div>
   <ng-template prizmDocPageTab>
-    <prizm-doc-example id="base" [content]="exampleBase" heading="Base">
+    <prizm-doc-example id="base" [stackblitzVersions]="['4']" [content]="exampleBase" heading="Base">
       <prizm-listing-item-base-example></prizm-listing-item-base-example>
     </prizm-doc-example>
 
     <prizm-doc-example
       id="with-instruments"
+      [stackblitzVersions]="['4']"
       [content]="exampleWithInstruments"
       heading="With buttons and instruments"
     >
       <prizm-listing-item-with-instrumnets-example></prizm-listing-item-with-instrumnets-example>
     </prizm-doc-example>
 
-    <prizm-doc-example id="with-instruments" [content]="exampleChips" heading="Chips">
+    <prizm-doc-example
+      id="with-instruments"
+      [stackblitzVersions]="['4']"
+      [content]="exampleChips"
+      heading="Chips"
+    >
       <prizm-listing-item-chips-example></prizm-listing-item-chips-example>
     </prizm-doc-example>
   </ng-template>
