--- a/apps/doc/src/app/components/zoom-control/zoom-control-example.component.html
+++ b/apps/doc/src/app/components/zoom-control/zoom-control-example.component.html
@@ -4,7 +4,12 @@
     zoom in or out of the map. The zoom level is controlled by the zoom level of the map.
   </div>
   <ng-template prizmDocPageTab>
-    <prizm-doc-example id="base" [content]="zoomControlBasicExample" heading="Base">
+    <prizm-doc-example
+      id="base"
+      [stackblitzVersions]="['4']"
+      [content]="zoomControlBasicExample"
+      heading="Base"
+    >
       <prizm-zoom-control-example-basic></prizm-zoom-control-example-basic>
     </prizm-doc-example>
   </ng-template>
