fix: editable row example td cursor changed

--- a/apps/doc/src/app/components/table/examples/table-editable-row-example/table-editable-row-example.component.less
+++ b/apps/doc/src/app/components/table/examples/table-editable-row-example/table-editable-row-example.component.less
@@ -9,7 +9,12 @@
     }
   }
 
+  td:has(.edit-buttons-container) {
+    padding: 0;
+  }
+
   .edit-buttons-container {
+    cursor: default;
     height: 100%;
     width: 100%;
     padding: 0 8px;
