--- a/libs/components/src/lib/components/table/tr/tr.component.less
+++ b/libs/components/src/lib/components/table/tr/tr.component.less
@@ -1,6 +1,5 @@
 [prizmTbody] tr[prizmTr] {
-  cursor: var(--prizm-table-row-cursor, pointer);
-
+  cursor: var(--prizm-table-row-cursor, default);
   color: var(--prizm-v3-text-icon-secondary);
 
   background: var(--prizm-table-row-background, var(--prizm-v3-background-fill-primary));
