--- a/apps/doc/src/app/components/table/examples/table-dynamic-row-group-example/table-dynamic-row-group-example.component.html
+++ b/apps/doc/src/app/components/table/examples/table-dynamic-row-group-example/table-dynamic-row-group-example.component.html
@@ -11,7 +11,7 @@
       </tr>
     </thead>
 
-    <tbody [data]="products" prizmTbody heading="Группа 1 (5-6 колонок))">
+    <tbody [data]="products" prizmTbody heading="Группа 1 (5-6 колонок)">
       <ng-container
         *prizmRow="
           let item of products;
