fix: scroll theme works incorrect #1657

--- a/libs/components/src/lib/components/scrollbar/scroll-controls.component.html
+++ b/libs/components/src/lib/components/scrollbar/scroll-controls.component.html
@@ -6,7 +6,7 @@
     [class.bar_has-horizontal]="bars[1]"
     prizmScrollbarWrapper
   >
-    <div class="thumb" prizmScrollbar="vertical" prizmTheme></div>
+    <div class="thumb" prizmScrollbar="vertical"></div>
   </div>
   <div
     class="bar bar_horizontal"
@@ -15,6 +15,6 @@
     [class.bar_has-vertical]="bars[0]"
     prizmScrollbarWrapper
   >
-    <div class="thumb" prizmScrollbar="horizontal" prizmTheme></div>
+    <div class="thumb" prizmScrollbar="horizontal"></div>
   </div>
 </ng-container>
