fix: correct upper padding at chips in outer inputs in multiselect #1640

--- a/libs/components/src/lib/components/dropdowns/multi-select/input-multi-select.component.less
+++ b/libs/components/src/lib/components/dropdowns/multi-select/input-multi-select.component.less
@@ -100,6 +100,13 @@ prizm-checkbox {
   display: none;
 }
 
+prizm-chips {
+  &.inner,
+  &[data-size='s'] {
+    --prizm-chips-item-heigh: 16px;
+  }
+}
+
 prizm-chips,
 :host {
   margin: 2px 0;
