fix: table examples styles improvement #1655

--- a/apps/doc/src/app/components/table/table-example.component.html
+++ b/apps/doc/src/app/components/table/table-example.component.html
@@ -62,11 +62,7 @@
       <prizm-table-server-sort-example></prizm-table-server-sort-example>
     </prizm-doc-example>
 
-    <prizm-doc-example
-      id="datasource"
-      [content]="exampleDataSourceTable"
-      heading="Sort, Pagination, Filtering"
-    >
+    <prizm-doc-example id="datasource" [content]="exampleDataSourceTable" heading="Sort, Search, Pagination">
       <prizm-table-data-source-example></prizm-table-data-source-example>
     </prizm-doc-example>
 
