--- a/libs/components/src/lib/components/table/tbody/tbody.component.less
+++ b/libs/components/src/lib/components/table/tbody/tbody.component.less
@@ -43,6 +43,10 @@
       &_expanded {
         transform: rotate(90deg);
       }
+
+      &:hover {
+        color: var(--prizm-v3-button-primary-solid-hover);
+      }
     }
 
     &__content {
