fix: table examples styles improvement #1655

--- a/libs/components/src/lib/components/table/tbody/tbody.component.less
+++ b/libs/components/src/lib/components/table/tbody/tbody.component.less
@@ -44,6 +44,10 @@
       &_expanded {
         transform: rotate(90deg);
       }
+
+      &:hover {
+        color: var(--prizm-button-primary-solid-hover);
+      }
     }
 
     &__content {
