--- a/apps/doc/src/app/components/input/input-number/examples/disabled-example/input-number-disabled-example.component.html
+++ b/apps/doc/src/app/components/input/input-number/examples/disabled-example/input-number-disabled-example.component.html
@@ -1,11 +1,16 @@
-<prizm-input-layout automation-id="layout-button" label="Заголовок" size="l" status="default">
+<prizm-input-layout
+  [label]="({ russian: 'Заголовок' } | prizmLang : 'Label' | async)!"
+  automation-id="layout-button"
+  size="l"
+  status="default"
+>
   <input
     #inputNumber="prizmInputNumber"
     [step]="2"
     [formControl]="requiredInputControl"
+    [placeholder]="({ russian: 'Введите число' } | prizmLang : 'Enter a number' | async)!"
     type="number"
     prizmInput
-    placeholder="Введите число"
   />
   <ng-template [control]="inputNumber" prizmInputStatusText></ng-template>
   <prizm-input-number-auxiliary-controls
@@ -22,5 +27,10 @@
   prizmButton
   automation-id="update-state-button"
 >
-  {{ requiredInputControl.disabled ? 'Активировать' : 'Деактивировать' }}
+  <ng-container *prizmIfLang="'russian'; else eng">
+    {{ requiredInputControl.disabled ? 'Активировать' : 'Деактивировать' }}
+  </ng-container>
+  <ng-template #eng>
+    {{ requiredInputControl.disabled ? 'Active' : 'Disabled' }}
+  </ng-template>
 </button>
