fix: remove hint from input-number #000

--- a/apps/doc/src/app/components/input/input-number/input-number-example.component.html
+++ b/apps/doc/src/app/components/input/input-number/input-number-example.component.html
@@ -4,41 +4,41 @@
       <prizm-input-number-basic-example></prizm-input-number-basic-example>
     </prizm-doc-example>
 
-    <prizm-doc-example
-      id="disabled"
-      [content]="prizmInputNumberDisabled"
-      heading="Input number disabled example"
-    >
-      <prizm-input-number-disabled-example></prizm-input-number-disabled-example>
-    </prizm-doc-example>
+    <!--    <prizm-doc-example-->
+    <!--      id="disabled"-->
+    <!--      [content]="prizmInputNumberDisabled"-->
+    <!--      heading="Input number disabled example"-->
+    <!--    >-->
+    <!--      <prizm-input-number-disabled-example></prizm-input-number-disabled-example>-->
+    <!--    </prizm-doc-example>-->
 
-    <prizm-doc-example
-      id="counter"
-      [content]="prizmInputNumberCounter"
-      heading="Input number counter example"
-    >
-      <prizm-input-number-counter-example></prizm-input-number-counter-example>
-    </prizm-doc-example>
+    <!--    <prizm-doc-example-->
+    <!--      id="counter"-->
+    <!--      [content]="prizmInputNumberCounter"-->
+    <!--      heading="Input number counter example"-->
+    <!--    >-->
+    <!--      <prizm-input-number-counter-example></prizm-input-number-counter-example>-->
+    <!--    </prizm-doc-example>-->
 
-    <prizm-doc-example
-      id="counter-float"
-      [content]="prizmInputNumberCounterFloat"
-      heading="Input number counter float example"
-    >
-      <prizm-input-number-counter-float-example></prizm-input-number-counter-float-example>
-    </prizm-doc-example>
+    <!--    <prizm-doc-example-->
+    <!--      id="counter-float"-->
+    <!--      [content]="prizmInputNumberCounterFloat"-->
+    <!--      heading="Input number counter float example"-->
+    <!--    >-->
+    <!--      <prizm-input-number-counter-float-example></prizm-input-number-counter-float-example>-->
+    <!--    </prizm-doc-example>-->
 
-    <prizm-doc-example id="counter-invalid" [content]="prizmInputNumberInvalid" heading="Form group">
-      <prizm-input-number-invalid-example></prizm-input-number-invalid-example>
-    </prizm-doc-example>
+    <!--    <prizm-doc-example id="counter-invalid" [content]="prizmInputNumberInvalid" heading="Form group">-->
+    <!--      <prizm-input-number-invalid-example></prizm-input-number-invalid-example>-->
+    <!--    </prizm-doc-example>-->
 
-    <prizm-doc-example
-      id="number-min-max"
-      [content]="prizmInputNumberMinMax"
-      heading="Input number min max example"
-    >
-      <prizm-input-number-min-max-example></prizm-input-number-min-max-example>
-    </prizm-doc-example>
+    <!--    <prizm-doc-example-->
+    <!--      id="number-min-max"-->
+    <!--      [content]="prizmInputNumberMinMax"-->
+    <!--      heading="Input number min max example"-->
+    <!--    >-->
+    <!--      <prizm-input-number-min-max-example></prizm-input-number-min-max-example>-->
+    <!--    </prizm-doc-example>-->
   </ng-template>
 
   <ng-template prizmDocPageTab prizmDocHost>
