feat(components/input-date-time): added native date transformation of min max properties #1315

--- a/apps/doc/src/app/components/input/input-layout-date-time/examples/native-date/input-layout-native-date-time-base-example.component.html
+++ b/apps/doc/src/app/components/input/input-layout-date-time/examples/native-date/input-layout-native-date-time-base-example.component.html
@@ -1,5 +1,5 @@
 <prizm-input-layout label="Введите дату">
-  <prizm-input-layout-date-time [formControl]="value"></prizm-input-layout-date-time>
+  <prizm-input-layout-date-time [formControl]="value" [min]="min" [max]="max"></prizm-input-layout-date-time>
 </prizm-input-layout>
 <div>
   {{ value.value | date : 'short' }}
