--- a/apps/doc/src/app/components/input/input-layout-date-time/input-layout-date-time.component.html
+++ b/apps/doc/src/app/components/input/input-layout-date-time/input-layout-date-time.component.html
@@ -87,7 +87,7 @@
 
       <ng-template
         documentationPropertyName="min"
-        documentationPropertyType="PrizmDay | [PrizmDay, PrizmTime]"
+        documentationPropertyType="PrizmDay | [PrizmDay, PrizmTime] | Date"
         documentationPropertyMode="input"
       >
         Min Date
@@ -95,7 +95,7 @@
 
       <ng-template
         documentationPropertyName="max"
-        documentationPropertyType="PrizmDay | [PrizmDay, PrizmTime]"
+        documentationPropertyType="PrizmDay | [PrizmDay, PrizmTime] | Date"
         documentationPropertyMode="input"
       >
         Max Date
