fix(doc): update examples for stackblitz #1595

--- a/apps/doc/src/app/components/radio/radio-button-example.component.html
+++ b/apps/doc/src/app/components/radio/radio-button-example.component.html
@@ -8,12 +8,12 @@
       <prizm-radio-button-basic-example></prizm-radio-button-basic-example>
     </prizm-doc-example>
 
-    <prizm-doc-example id="big" [content]="exampleBasicRadio" heading="Big Size">
-      <prizm-radio-button-basic-example size="l"></prizm-radio-button-basic-example>
+    <prizm-doc-example id="big" [content]="exampleBigRadio" heading="Big Size">
+      <prizm-radio-button-big-example size="l"></prizm-radio-button-big-example>
     </prizm-doc-example>
 
-    <prizm-doc-example id="small" [content]="exampleBasicRadio" heading="Small Size">
-      <prizm-radio-button-basic-example size="s"></prizm-radio-button-basic-example>
+    <prizm-doc-example id="small" [content]="exampleSmallRadio" heading="Small Size">
+      <prizm-radio-button-small-example></prizm-radio-button-small-example>
     </prizm-doc-example>
   </ng-template>
 
