--- a/apps/doc/src/app/components/dialogs/dialog/dialog-example.component.html
+++ b/apps/doc/src/app/components/dialogs/dialog/dialog-example.component.html
@@ -102,6 +102,14 @@
       </ng-template>
 
       <ng-template
+        [(documentationPropertyValue)]="dismissable"
+        documentationPropertyName="dismissable"
+        documentationPropertyType="boolean"
+      >
+        Dismissable
+      </ng-template>
+
+      <ng-template
         [(documentationPropertyValue)]="height"
         documentationPropertyName="height"
         documentationPropertyType="string"
