fix(doc/dialog): fix spelling error #000

--- a/apps/doc/src/app/components/dialogs/dialog/dialog-example.component.html
+++ b/apps/doc/src/app/components/dialogs/dialog/dialog-example.component.html
@@ -88,11 +88,11 @@
       </ng-template>
 
       <ng-template
-        [(documentationPropertyValue)]="dismissable"
-        documentationPropertyName="dismissable"
+        [(documentationPropertyValue)]="dismissible"
+        documentationPropertyName="dismissible"
         documentationPropertyType="boolean"
       >
-        Dismissable
+        Dismissible
       </ng-template>
 
       <ng-template
