feat(doc/dialog):  add examples how to use custom dialog #1602

--- a/apps/doc/src/app/components/dialogs/dialog/dialog-example.component.html
+++ b/apps/doc/src/app/components/dialogs/dialog/dialog-example.component.html
@@ -32,6 +32,9 @@
     <prizm-doc-example id="result-handling" [content]="exampleResulthandling" heading="Result Handling">
       <prizm-dialog-service-result-handling-example></prizm-dialog-service-result-handling-example>
     </prizm-doc-example>
+    <prizm-doc-example id="custom-service" [content]="exampleCustomService" heading="Custom Service">
+      <prizm-dialog-custom-service-example></prizm-dialog-custom-service-example>
+    </prizm-doc-example>
   </ng-template>
 
   <ng-template prizmDocPageTab prizmDocHost>
