--- a/libs/components/src/lib/components/table/th/th.style.less
+++ b/libs/components/src/lib/components/table/th/th.style.less
@@ -35,6 +35,15 @@
     box-shadow: 0 0 0 1px var(--prizm-table-stroke-cell-active) inset;
   }
 
+  &:has([prizmButton][appearanceType='ghost']),
+  &:has([prizmIconButton][appearanceType='ghost']) {
+    ::ng-deep prizm-wrapper {
+      &[data-appearance-type='ghost'][data-state='hovered'] {
+        background-color: transparent;
+      }
+    }
+  }
+
   .resize-bar {
     height: 100%;
     width: 4px;
