--- a/libs/components/src/lib/components/table/td/td.component.less
+++ b/libs/components/src/lib/components/table/td/td.component.less
@@ -31,54 +31,29 @@
   background: inherit;
   color: inherit;
 
-  // TODO: for 4.0
-
-  // &:has([prizmInput]) {
-  //   padding: 0;
-  // }
-
-  // &:has([prizmInput]:focus) {
-  //   background-color: var(--prizm-v3-background-fill-primary);
-  //   box-shadow: 0 0 0 1px var(--prizm-v3-table-stroke-cell-active) inset;
-  // }
-
   &[status='success'] {
     background: var(--prizm-v3-status-success-secondary-default);
-
-    // TODO: for 4.0
-    // &:has([prizmInput]):hover,
-    // &:has([prizmInput]:focus) {
-    //   box-shadow: 0 0 0 1px var(--prizm-v3-status-success-primary-default) inset;
-    // }
   }
 
   &[status='default'] {
     background: inherit;
-
-    // TODO: for 4.0
-    // &:has([prizmInput]:not(:focus)):hover {
-    //   box-shadow: 0 0 0 1px var(--prizm-v3-table-stroke-cell-hover) inset;
-    // }
   }
 
   &[status='warning'] {
     background: var(--prizm-v3-status-warning-secondary-default);
-
-    // TODO: for 4.0
-    // &:has([prizmInput]):hover,
-    // &:has([prizmInput]:focus) {
-    //   box-shadow: 0 0 0 1px var(--prizm-v3-status-warning-primary-default) inset;
-    // }
   }
 
   &[status='danger'] {
     background: var(--prizm-v3-status-alarm-secondary-default);
+  }
 
-    // TODO: for 4.0
-    // &:has([prizmInput]):hover,
-    // &:has([prizmInput]:focus) {
-    //   box-shadow: 0 0 0 1px var(--prizm-v3-status-alarm-primary-default) inset;
-    // }
+  &:has([prizmButton][appearanceType='ghost']),
+  &:has([prizmIconButton][appearanceType='ghost']) {
+    ::ng-deep prizm-wrapper {
+      &[data-appearance-type='ghost'][data-state='hovered'] {
+        background-color: transparent;
+      }
+    }
   }
 }
 
