--- a/apps/doc/src/app/components/tooltip/tooltip-example.component.html
+++ b/apps/doc/src/app/components/tooltip/tooltip-example.component.html
@@ -7,17 +7,17 @@
       <prizm-tooltip-base-example></prizm-tooltip-base-example>
     </prizm-doc-example>
 
-    <prizm-doc-example id="with-template" [content]="exampleWithTemplate" heading="With Template">
-      <prizm-tooltip-with-template-example></prizm-tooltip-with-template-example>
-    </prizm-doc-example>
+    <!--    <prizm-doc-example id="with-template" [content]="exampleWithTemplate" heading="With Template">-->
+    <!--      <prizm-tooltip-with-template-example></prizm-tooltip-with-template-example>-->
+    <!--    </prizm-doc-example>-->
 
-    <prizm-doc-example id="with-custom-context" [content]="exampleWithContext" heading="With Context">
-      <prizm-tooltip-with-custom-context-example></prizm-tooltip-with-custom-context-example>
-    </prizm-doc-example>
+    <!--    <prizm-doc-example id="with-custom-context" [content]="exampleWithContext" heading="With Context">-->
+    <!--      <prizm-tooltip-with-custom-context-example></prizm-tooltip-with-custom-context-example>-->
+    <!--    </prizm-doc-example>-->
 
-    <prizm-doc-example id="with-component" [content]="exampleWithComponent" heading="With Component">
-      <prizm-tooltip-with-component-example></prizm-tooltip-with-component-example>
-    </prizm-doc-example>
+    <!--    <prizm-doc-example id="with-component" [content]="exampleWithComponent" heading="With Component">-->
+    <!--      <prizm-tooltip-with-component-example></prizm-tooltip-with-component-example>-->
+    <!--    </prizm-doc-example>-->
   </ng-template>
 
   <ng-template prizmDocPageTab prizmDocHost>
@@ -131,7 +131,18 @@
       <ng-template
         [(documentationPropertyValue)]="prizmTooltipTheme"
         [documentationPropertyValues]="prizmTooltipThemeVariants"
+        [documentationPropertyDeprecated]="true"
         documentationPropertyName="prizmHintTheme"
+        documentationPropertyType="PrizmTheme | null"
+        documentationPropertyMode="input"
+      >
+        use prizmTooltipTheme
+      </ng-template>
+
+      <ng-template
+        [(documentationPropertyValue)]="prizmTooltipTheme"
+        [documentationPropertyValues]="prizmTooltipThemeVariants"
+        documentationPropertyName="prizmTooltipTheme"
         documentationPropertyType="PrizmTheme | null"
         documentationPropertyMode="input"
       >
