--- a/apps/doc/src/app/components/tooltip/tooltip-example.component.html
+++ b/apps/doc/src/app/components/tooltip/tooltip-example.component.html
@@ -24,6 +24,7 @@
     <prizm-doc-demo>
       <button
         #element="prizmTooltip"
+        #tooltip="prizmTooltip"
         [prizmDocHostElement]="element"
         [prizmTooltip]="content"
         [prizmAutoReposition]="prizmAutoReposition"
