--- a/libs/components/src/lib/components/input/common/input-layout/input-layout-hidden-control.component.less
+++ b/libs/components/src/lib/components/input/common/input-layout/input-layout-hidden-control.component.less
@@ -1,5 +1,5 @@
 :host.has-hidden-control {
-  .label-container {
+  .label-container:not(.label-container-outer) {
     height: 16px;
     margin-bottom: 2px;
 
