--- a/libs/components/src/lib/components/input/common/input-layout/input-layout.component.less
+++ b/libs/components/src/lib/components/input/common/input-layout/input-layout.component.less
@@ -46,6 +46,7 @@
   width: 100%;
   display: flex;
   gap: 4px;
+  margin-bottom: 4px;
 
   &-required {
     color: var(--prizm-status-alarm-primary-default);
