--- a/libs/components/src/lib/components/internal/primitive-year-month-pagination/primitive-year-month-pagination.component.html
+++ b/libs/components/src/lib/components/internal/primitive-year-month-pagination/primitive-year-month-pagination.component.html
@@ -1,11 +1,32 @@
 <div class="box">
   <div class="year-month prizm-font-input-text-14px">
-    <div *ngIf="oneMonth; else buttonMonth">
-      {{ value?.month | prizmMonth | async }}
+    <div class="month-box" (click)="onMonthClick($event)">
+      <button
+        class="pagination-btn"
+        [attr.testId]="'prizm-primitive-year-month-pagination__year-button'"
+        [class.active]="monthActive"
+        [prizmFocusable]="true"
+        [disabled]="oneMonth"
+        type="button"
+      >
+        {{ value?.month | prizmMonth | async }}
+
+        <prizm-icons-full *ngIf="!oneMonth" name="triangle-down"></prizm-icons-full>
+      </button>
     </div>
 
-    <div *ngIf="oneYear; else button">
-      {{ value.formattedYear }}
+    <div class="year-box" (click)="onYearClick($event)">
+      <button
+        class="pagination-btn"
+        [attr.data-testid]="'prizm-primitive-year-month-pagination__year-button'"
+        [prizmFocusable]="true"
+        [class.active]="yearActive"
+        [disabled]="oneYear"
+        type="button"
+      >
+        {{ value.formattedYear }}
+        <prizm-icons-full *ngIf="!oneYear" name="triangle-down"></prizm-icons-full>
+      </button>
     </div>
   </div>
   <div>
@@ -20,39 +41,3 @@
     </prizm-primitive-spin-button>
   </div>
 </div>
-
-<ng-template #button>
-  <div class="year-box" (click)="onYearClick($event)">
-    <button
-      class="pagination-btn"
-      [attr.data-testid]="'prizm-primitive-year-month-pagination__year-button'"
-      [prizmFocusable]="true"
-      [class.active]="yearActive"
-      type="button"
-    >
-      {{ value.formattedYear }}
-      <span>
-        <!--        <prizm-icon iconClass="temp-chevrons-dropdown-small"></prizm-icon>-->
-        <prizm-icons-full name="triangle-down"></prizm-icons-full>
-      </span>
-    </button>
-  </div>
-</ng-template>
-
-<ng-template #buttonMonth>
-  <div class="month-box" (click)="onMonthClick($event)">
-    <button
-      class="pagination-btn"
-      [attr.testId]="'prizm-primitive-year-month-pagination__year-button'"
-      [class.active]="monthActive"
-      [prizmFocusable]="true"
-      type="button"
-    >
-      {{ value?.month | prizmMonth | async }}
-      <span>
-        <!--        <prizm-icon iconClass="temp-chevrons-dropdown-small"></prizm-icon>-->
-        <prizm-icons-full name="triangle-down"></prizm-icons-full>
-      </span>
-    </button>
-  </div>
-</ng-template>
