--- a/libs/components/src/styles/mixins/mixins.less
+++ b/libs/components/src/styles/mixins/mixins.less
@@ -138,7 +138,7 @@
 
   color: var(--prizm-text-icon-secondary);
 
-  &:hover:not(.active):not(:active) {
+  &:hover:not(.active):not(:active):not(:disabled) {
     background-color: var(--prizm-button-ghost-hover);
     border-radius: 2px;
   }
