fix(components/calendar): change calendar resrtictions ux #1674

--- a/libs/components/src/lib/components/internal/primitive-year-month-pagination/primitive-year-month-pagination.component.html
+++ b/libs/components/src/lib/components/internal/primitive-year-month-pagination/primitive-year-month-pagination.component.html
@@ -1,56 +1,44 @@
 <div class="box">
   <div class="year-month prizm-font-input-text-14px">
-    <div *ngIf="oneMonth; else buttonMonth">
-      {{ value | prizmMonth | async }}
+    <div class="month-box" (click)="onMonthClick($event)">
+      <button
+        class="pagination-btn"
+        [attr.testId]="'prizm-primitive-year-month-pagination__year-button'"
+        [class.active]="monthActive"
+        [prizmFocusable]="true"
+        [disabled]="oneMonth"
+        type="button"
+      >
+        {{ value | prizmMonth | async }}
+
+        <prizm-icon *ngIf="!oneMonth" iconClass="chevrons-dropdown-small"></prizm-icon>
+      </button>
     </div>
 
-    <div *ngIf="oneYear; else button">
-      {{ value.formattedYear }}
+    <div class="year-box" (click)="onYearClick($event)">
+      <button
+        class="pagination-btn"
+        [attr.data-testid]="'prizm-primitive-year-month-pagination__year-button'"
+        [prizmFocusable]="true"
+        [class.active]="yearActive"
+        [disabled]="oneYear"
+        type="button"
+      >
+        {{ value.formattedYear }}
+        <prizm-icon *ngIf="!oneYear" iconClass="chevrons-dropdown-small"></prizm-icon>
+      </button>
     </div>
-  </div>
-  <div>
-    <prizm-primitive-spin-button
-      [class.hidden]="hideButtons"
-      [focusable]="false"
-      [leftDisabled]="prevMonthDisabled"
-      [rightDisabled]="nextMonthDisabled"
-      (leftClick)="onPrevMonthClick()"
-      (rightClick)="onNextMonthClick()"
-    >
-    </prizm-primitive-spin-button>
+
+    <div>
+      <prizm-primitive-spin-button
+        [class.hidden]="hideButtons"
+        [focusable]="false"
+        [leftDisabled]="prevMonthDisabled"
+        [rightDisabled]="nextMonthDisabled"
+        (leftClick)="onPrevMonthClick()"
+        (rightClick)="onNextMonthClick()"
+      >
+      </prizm-primitive-spin-button>
+    </div>
   </div>
 </div>
-
-<ng-template #button>
-  <div class="year-box" (click)="onYearClick($event)">
-    <button
-      class="pagination-btn"
-      [attr.data-testid]="'prizm-primitive-year-month-pagination__year-button'"
-      [prizmFocusable]="true"
-      [class.active]="yearActive"
-      type="button"
-    >
-      {{ value.formattedYear }}
-      <span>
-        <prizm-icon iconClass="chevrons-dropdown-small"></prizm-icon>
-      </span>
-    </button>
-  </div>
-</ng-template>
-
-<ng-template #buttonMonth>
-  <div class="month-box" (click)="onMonthClick($event)">
-    <button
-      class="pagination-btn"
-      [attr.testId]="'prizm-primitive-year-month-pagination__year-button'"
-      [class.active]="monthActive"
-      [prizmFocusable]="true"
-      type="button"
-    >
-      {{ value | prizmMonth | async }}
-      <span>
-        <prizm-icon iconClass="chevrons-dropdown-small"></prizm-icon>
-      </span>
-    </button>
-  </div>
-</ng-template>
