--- a/libs/components/src/lib/components/cron/cron.component.html
+++ b/libs/components/src/lib/components/cron/cron.component.html
@@ -77,7 +77,7 @@
     <prizm-switcher
       [fullWidth]="true"
       [selectedSwitcherIdx]="selectedSwitcherIdx"
-      [switchers]="switchers"
+      [switchers]="(switchers$$ | async)!"
       (selectedSwitcherIdxChange)="indexChanged($event)"
     >
     </prizm-switcher>
@@ -109,7 +109,7 @@
       </div>
     </div>
   </div>
-
+  <div>mz:{{ selectedSwitcherIdx }}</div>
   <div class="sub-pages" [ngSwitch]="selectedSwitcherIdx">
     <prizm-scrollbar>
       <prizm-cron-second *ngSwitchCase="0" [specifiedList]="specifiedList?.second ?? []"></prizm-cron-second>
