fix(components/chips): dots overflows chip list container #1713

--- a/libs/components/src/lib/components/chips/chips.component.less
+++ b/libs/components/src/lib/components/chips/chips.component.less
@@ -31,5 +31,11 @@
       height: 18px;
       width: 100%;
     }
+
+    &:has(.more-item) {
+      prizm-chips-item.single-line {
+        max-width: calc(100% - 20px);
+      }
+    }
   }
 }
