feat(doc/getting-started): add info about setup #000

--- a/apps/doc/src/app/how-to-work/for-developers/for-developers.component.html
+++ b/apps/doc/src/app/how-to-work/for-developers/for-developers.component.html
@@ -62,6 +62,8 @@
       <ng-template prizmAccordionContent>
         <p class="prizm-space_top-2">To use our icons as svg, please install our library</p>
         <prizm-doc-code code="npm i @prizm-ui/icons"></prizm-doc-code>
+        <p class="prizm-space_top-2">If you want to lazy load icons</p>
+        <prizm-doc-code code="npm i @prizm-ui/icons-loader"></prizm-doc-code>
         <p class="prizm-space_top-3">
           But if you want to use fonts not only as svg, and also as font, please add to your angular config
         </p>
