fix(components/input-multi-select): fix outline on chevron #000

--- a/libs/components/src/lib/components/dropdowns/multi-select/input-multi-select.component.less
+++ b/libs/components/src/lib/components/dropdowns/multi-select/input-multi-select.component.less
@@ -67,6 +67,7 @@
   transition-property: color, transform;
   transition-duration: var(--prizm-duration, 0.3s);
   transition-timing-function: ease-in-out;
+  outline: none;
 
   &.active {
     color: var(--prizm-button-primary-solid-active);
