--- a/libs/components/src/lib/components/dropdowns/select/input-select.component.less
+++ b/libs/components/src/lib/components/dropdowns/select/input-select.component.less
@@ -65,7 +65,7 @@
 }
 
 .icon-dropdown {
-  color: #777b92;
+  color: var(--prizm-button-secondary-solid-default);
   cursor: pointer;
   transition-property: transform;
   transition-property: all;
@@ -78,7 +78,7 @@
   }
 
   &.active {
-    color: #337eff;
+    color: var(--prizm-button-primary-solid-active);
   }
 }
 
