--- a/libs/components/src/lib/components/chips/chips.component.html
+++ b/libs/components/src/lib/components/chips/chips.component.html
@@ -1,38 +1,40 @@
-<div
-  class="chips-list"
-  #prizmElementReady="prizmElementReady"
-  #parent
-  *ngIf="!!(chipsList$ | async)?.length"
-  [class.hidden]="singleLine"
-  [checker]="ready"
-  prizmElementReady
->
-  <ng-container *ngIf="prizmElementReady.ready$ | async">
-    <ng-container
-      *ngFor="let item of chipsList$ | async; let i = index; trackBy: trackByIdx"
-      [ngTemplateOutlet]="buttonTemplate"
-      [ngTemplateOutletContext]="{
-        item: item,
-        idx: i,
-        allChipsCount: (chipsList$ | async)?.length ?? 0,
-        parent: parent,
-        singleLine: singleLine
-      }"
-    >
-    </ng-container>
-
-    <ng-container *ngIf="overflowedChipsList$ | async as chipsOverflowedList">
-      <div
-        class="more-item"
-        *ngIf="chipsOverflowedList.size"
-        [prizmHint]="getOverflowedChipsListHint()"
-        [prizmHintDirection]="hintDirection"
+<ng-container *prizmLet="chipsList$ | async as chipsList">
+  <div
+    class="chips-list"
+    #prizmElementReady="prizmElementReady"
+    #parent
+    *ngIf="!!chipsList?.length"
+    [class.hidden]="singleLine"
+    [checker]="ready"
+    prizmElementReady
+  >
+    <ng-container *ngIf="prizmElementReady.ready$ | async">
+      <ng-container
+        *ngFor="let item of chipsList; let i = index; trackBy: trackByIdx"
+        [ngTemplateOutlet]="buttonTemplate"
+        [ngTemplateOutletContext]="{
+          item: item,
+          idx: i,
+          allChipsCount: chipsList?.length ?? 0,
+          parent: parent,
+          singleLine: singleLine
+        }"
       >
-        ...
-      </div>
+      </ng-container>
+
+      <ng-container *ngIf="overflowedChipsList$ | async as chipsOverflowedList">
+        <div
+          class="more-item"
+          *ngIf="chipsOverflowedList.size"
+          [prizmHint]="getOverflowedChipsListHint()"
+          [prizmHintDirection]="hintDirection"
+        >
+          ...
+        </div>
+      </ng-container>
     </ng-container>
-  </ng-container>
-</div>
+  </div>
+</ng-container>
 
 <ng-template
   #buttonTemplate
