fix(components/calendar): year-month pagination disabled state fix #000

--- a/libs/components/src/styles/mixins/mixins.less
+++ b/libs/components/src/styles/mixins/mixins.less
@@ -147,4 +147,9 @@
   &.active {
     color: var(--prizm-button-primary-solid-active);
   }
+
+  &:disabled {
+    pointer-events: none;
+    cursor: default;
+  }
 }
