--- a/libs/components/src/lib/components/internal/primitive-year-month-pagination/primitive-year-month-pagination.component.html
+++ b/libs/components/src/lib/components/internal/primitive-year-month-pagination/primitive-year-month-pagination.component.html
@@ -1,12 +1,13 @@
 <div class="box">
   <div class="year-month prizm-font-input-text-14px">
-    <div class="month-box" (click)="onMonthClick($event)">
+    <div class="month-box">
       <button
         class="pagination-btn"
         [attr.testId]="'prizm-primitive-year-month-pagination__year-button'"
         [class.active]="monthActive"
         [prizmFocusable]="true"
         [disabled]="oneMonth"
+        (click)="onMonthClick($event)"
         type="button"
       >
         {{ value?.month | prizmMonth | async }}
@@ -15,13 +16,14 @@
       </button>
     </div>
 
-    <div class="year-box" (click)="onYearClick($event)">
+    <div class="year-box">
       <button
         class="pagination-btn"
         [attr.data-testid]="'prizm-primitive-year-month-pagination__year-button'"
         [prizmFocusable]="true"
         [class.active]="yearActive"
         [disabled]="oneYear"
+        (click)="onYearClick($event)"
         type="button"
       >
         {{ value.formattedYear }}
