fix(components/file-upload): newly uploaded files should not overwrte existing files array #1662

--- a/libs/components/src/lib/components/file-upload/file-upload.component.html
+++ b/libs/components/src/lib/components/file-upload/file-upload.component.html
@@ -21,7 +21,7 @@
 
     <button
       class="dropzone__file-select"
-      [disabled]="disabled"
+      [disabled]="disabled || files.length >= maxFilesCount"
       (click)="inputFile.click()"
       type="button"
       prizmButton
