--- a/libs/components/src/lib/components/accordion/components/accordion-item/accordion-item.component.less
+++ b/libs/components/src/lib/components/accordion/components/accordion-item/accordion-item.component.less
@@ -20,7 +20,7 @@
   }
 
   &__header {
-    height: 47px;
+    height: 48px;
     padding: 0 16px;
 
     display: flex;
@@ -78,6 +78,10 @@
   &_expanded {
     .accordion_expanded__button {
       transform: rotate(180deg);
+    }
+
+    .accordion__header {
+      border-bottom: 1px solid var(--prizm-accordion-item-header-border-color-expanded, transparent);
     }
 
     &:focus {
