fix(doc/file-upload): example update for max file size #1662

--- a/apps/doc/src/app/components/file-upload/examples/auto-upload/auto-upload.component.html
+++ b/apps/doc/src/app/components/file-upload/examples/auto-upload/auto-upload.component.html
@@ -1,8 +1,8 @@
 <prizm-file-upload
   [multiple]="true"
-  [accept]="'image/*'"
+  [accept]="acceptedTypes"
   [progress]="$any(progress$$ | async)"
-  [maxFilesCount]="3"
+  [maxFilesCount]="maxFiles"
   [maxFileSize]="1000000"
   [disabled]="disabled"
   (filesChange)="onFilesChange($event)"
@@ -10,5 +10,5 @@
   (filesCountError)="onFilesCountError($event)"
   (retry)="retry($event)"
 >
-  Максимум три изображения размером не более 1МБ
+  Загружено {{ files.length }}/{{ maxFiles }}. {{ acceptedTypes }} размером не более 1МБ.
 </prizm-file-upload>
