--- a/apps/doc/src/app/components/file-upload/examples/i18n/file-upload-i18n-example.component.html
+++ b/apps/doc/src/app/components/file-upload/examples/i18n/file-upload-i18n-example.component.html
@@ -1,8 +1,8 @@
 <prizm-file-upload
   [multiple]="true"
-  [accept]="'image/*'"
+  [accept]="acceptedTypes"
   [progress]="$any(progress$$ | async)"
-  [maxFilesCount]="3"
+  [maxFilesCount]="maxFiles"
   [maxFileSize]="1000000"
   [disabled]="disabled"
   (filesChange)="onFilesChange($event)"
@@ -10,5 +10,5 @@
   (filesCountError)="onFilesCountError($event)"
   (retry)="retry($event)"
 >
-  Maximum of three images up to 1MB in size
+  Uploaded {{ files.length }}/{{ maxFiles }}. {{ acceptedTypes }} up to 1MB in size
 </prizm-file-upload>
