--- a/libs/components/src/lib/components/file-upload/file-upload.component.html
+++ b/libs/components/src/lib/components/file-upload/file-upload.component.html
@@ -21,7 +21,9 @@
 
     <button
       class="dropzone__file-select"
-      [disabled]="disabled || (multiple && files.length >= calculatedMaxFilesCount)"
+      [disabled]="disabled || files.length >= calculatedMaxFilesCount"
+      [prizmHint]="translations | prizmPluck : ['btn__select_hint_error']"
+      [prizmHintCanShow]="files.length >= calculatedMaxFilesCount"
       (click)="inputFile.click()"
       type="button"
       prizmButton
