feat(components/file-upload): add hint for disabled browse btn #1769

--- a/libs/components/src/lib/components/file-upload/file-upload.component.html
+++ b/libs/components/src/lib/components/file-upload/file-upload.component.html
@@ -22,6 +22,8 @@
     <button
       class="dropzone__file-select"
       [disabled]="disabled || files.length >= calculatedMaxFilesCount"
+      [prizmHint]="translations | prizmPluck : ['btn__select_hint_error']"
+      [prizmHintCanShow]="files.length >= calculatedMaxFilesCount"
       (click)="inputFile.click()"
       type="button"
       prizmButton
