fix(doc/file-upload): recall doc translation for v3 #000

--- a/apps/doc/src/app/components/file-upload/examples/basic/basic.component.html
+++ b/apps/doc/src/app/components/file-upload/examples/basic/basic.component.html
@@ -21,6 +21,5 @@
   appearance="primary"
   size="m"
 >
-  <ng-container *prizmIfLang="'russian'; else engBtn"> Отправить </ng-container>
-  <ng-template #engBtn> Upload </ng-template>
+  Отправить
 </button>
