--- a/libs/components/src/lib/components/button/button.component.html
+++ b/libs/components/src/lib/components/button/button.component.html
@@ -1,7 +1,7 @@
 <prizm-wrapper
   class="z-wrapper"
-  [attr.data-appearance-type]="appearanceType"
-  [appearance]="appearance"
+  [attr.data-appearance-type]="appearanceType!"
+  [appearance]="appearance!"
   [hovered]="computedHovered"
   [pseudoState]="pseudoState"
   [pressed]="computedPressed"
@@ -27,6 +27,6 @@
 <ng-template #showIconTemp let-icon="icon">
   <ng-container *polymorphOutlet="icon as content; context: { size: size }">
     <!--    <prizm-icon [iconClass]="content" [size]="16"></prizm-icon>-->
-    <prizm-icons-full [name]="content" [size]="16"></prizm-icons-full>
+    <prizm-icons-full [name]="content | prizmToType : 'string'" [size]="16"></prizm-icons-full>
   </ng-container>
 </ng-template>
