--- a/libs/components/src/lib/components/dropdowns/multi-select/input-multi-select.component.html
+++ b/libs/components/src/lib/components/dropdowns/multi-select/input-multi-select.component.html
@@ -24,78 +24,77 @@
     [ngModel]="($any(value) | prizmCallFunc : stringify) ?? ''"
     prizmInput
   />
-
-  <ng-template #dropdown>
-    <prizm-data-list
-      class="block"
-      *prizmLet="{ filteredItems: filteredItems$ | async } as $"
-      [scroll]="dropdownScroll"
-      [style.--prizm-data-list-border]="0"
-    >
-      <div class="list-search-item" *ngIf="searchable">
-        <prizm-input-layout [label]="searchLabelTranslation$ | async" size="m">
-          <input
-            class="input-search"
-            #input
-            [formControl]="searchInputControl"
-            (input)="dropdownHostRef.reCalculatePositions(1000 / 16)"
-            prizmInput
-            prizmAutoFocus
-          />
-          <button [interactive]="true" prizmInputIconButton="magnifying-glass" prizm-input-right></button>
-        </prizm-input-layout>
-      </div>
-      <ng-container *ngIf="$.filteredItems?.length; else emptyTemplate">
-        <div
-          class="item"
-          #parent
-          *ngFor="let item of $.filteredItems; let idx = index; trackBy: trackBy"
-          [class.selected]="item.checked"
-          [class.most-relevant]="searchable && searchInputControl.value && idx === 0"
-        >
-          <prizm-checkbox
-            [checked]="item.checked"
-            [ngModel]="item.checked"
-            [ngModelOptions]="{ standalone: true }"
-            [host]="parent"
-            [indeterminate]="!!item.indeterminate"
-            (changed)="select(item)"
-          >
-            <div
-              class="text"
-              #elem
-              *prizmLet="item | prizmCallFunc : stringify : $any(emptyContent) as text"
-              [prizmHint]="text"
-              [prizmHintDirection]="direction"
-              [prizmHintCanShow]="$any(elem | prizmCallFunc : prizmIsTextOverflow$ | async)"
-            >
-              <ng-container
-                *polymorphOutlet="
-                  valueTemplate as content;
-                  context: {
-                    $implicit: {
-                      obj: item.obj,
-                      checked: item.checked,
-                      stringify: item | prizmCallFunc : stringify
-                    }
-                  } as context
-                "
-              >
-                {{ text }}
-              </ng-container>
-            </div>
-          </prizm-checkbox>
-        </div>
-      </ng-container>
-      <ng-template #emptyTemplate>
-        <ng-container *polymorphOutlet="emptyContent as data">
-          <div class="empty-template">{{ emptyContent }}</div>
-        </ng-container>
-      </ng-template>
-    </prizm-data-list>
-  </ng-template>
 </prizm-dropdown-host>
 
+<ng-template #dropdown>
+  <prizm-data-list
+    class="block"
+    *prizmLet="{ filteredItems: filteredItems$ | async } as $"
+    [scroll]="dropdownScroll"
+    [style.--prizm-data-list-border]="0"
+  >
+    <div class="list-search-item" *ngIf="searchable">
+      <prizm-input-layout [label]="searchLabelTranslation$ | async" size="m">
+        <input
+          class="input-search"
+          #input
+          [formControl]="searchInputControl"
+          (input)="dropdownHostRef.reCalculatePositions(1000 / 16)"
+          prizmInput
+          prizmAutoFocus
+        />
+        <button [interactive]="true" prizmInputIconButton="magnifying-glass" prizm-input-right></button>
+      </prizm-input-layout>
+    </div>
+    <ng-container *ngIf="$.filteredItems?.length; else emptyTemplate">
+      <div
+        class="item"
+        #parent
+        *ngFor="let item of $.filteredItems; let idx = index; trackBy: trackBy"
+        [class.selected]="item.checked"
+        [class.most-relevant]="searchable && searchInputControl.value && idx === 0"
+      >
+        <prizm-checkbox
+          [checked]="item.checked"
+          [ngModel]="item.checked"
+          [ngModelOptions]="{ standalone: true }"
+          [host]="parent"
+          [indeterminate]="!!item.indeterminate"
+          (changed)="select(item)"
+        >
+          <div
+            class="text"
+            #elem
+            *prizmLet="item | prizmCallFunc : stringify : $any(emptyContent) as text"
+            [prizmHint]="text"
+            [prizmHintDirection]="direction"
+            [prizmHintCanShow]="$any(elem | prizmCallFunc : prizmIsTextOverflow$ | async)"
+          >
+            <ng-container
+              *polymorphOutlet="
+                valueTemplate as content;
+                context: $any({
+                  $implicit: {
+                    obj: item.obj,
+                    checked: item.checked,
+                    stringify: item | prizmCallFunc : stringify
+                  }
+                })
+              "
+            >
+              {{ text }}
+            </ng-container>
+          </div>
+        </prizm-checkbox>
+      </div>
+    </ng-container>
+    <ng-template #emptyTemplate>
+      <ng-container *polymorphOutlet="emptyContent as data">
+        <div class="empty-template">{{ emptyContent }}</div>
+      </ng-container>
+    </ng-template>
+  </prizm-data-list>
+</ng-template>
 <ng-container *prizmInputLayoutRight>
   <ng-container
     *polymorphOutlet="
